--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,12 @@ button:focus-visible {
   width: 100%;
   height: 100vh;
 }
+
+#credits {
+  color: #FFF;
+  text-shadow: 0 0 2px #000;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
